# advent-of-code-2021

./: .gitignore  Cargo.toml  README.md  run.sh
01/01/: program.rs
01/02/: program.rs
02/01/: program.rs
02/02/: program.rs
03/01/: program.rs
03/02/: program.rs
04/01/: program.rs
04/02/: program.rs
05/01/: program.rs
05/02/: program.rs
06/01/: program.rs
06/02/: program.rs
07/01/: program.rs
07/02/: program.rs
08/01/: program.rs
08/02/: program.rs  reasoning.md
09/01/: program.rs
09/02/: program.rs
10/01/: program.rs
10/02/: program.rs
11/01/: program.rs
11/02/: program.rs
12/01/: program.rs
12/02/: program.rs
13/01/: program.rs
13/02/: program.rs
14/01/: program.rs
14/02/: program-alt.rs  program.rs
15/01/: program.rs
15/02/: program.rs
16/01/: program.rs
16/02/: program.rs
17/01/: program.rs
17/02/: program.rs
18/01/: program.rs
18/02/: program.rs
19/01/: program.rs
19/02/: program.rs
20/01/: program.rs
20/02/: program.rs
21/01/: program.rs
21/02/: program.rs
22/01/: program.rs
22/02/: program.rs
23/: README.md
24/: program  program.rs
25/: program  program.rs
